--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
-    style="background-image: url('/assets/body-background-image.jpg');">
+    style="background-image: url('./assets/body-background-image.jpg');">
 
-    <div style="background-image: url('/assets/snapedit_1746365040651.jpg');"
+    <div style="background-image: url('./assets/snapedit_1746365040651.jpg');"
         class="bg-white bg-cover bg-opacity-90  p-10 rounded-xl shadow-xl w-full max-w-md">
         <h2 class="text-2xl font-bold text-white text-center mb-6">Sign Up</h2>
         <form id="form">
